--- a/src/main/resources/view/statistics.html
+++ b/src/main/resources/view/statistics.html
@@ -7,10 +7,8 @@
 		id="context"></script>
 	<script src="/statistics/public/js/model.js" type="text/javascript"></script>
 	<script src="/statistics/public/js/controller.js" type="text/javascript"></script>
+	<script src="/statistics/public/js/d3-3.5.5.min.js" type="text/javascript"></script>
 	<script type="text/ng-template" id="empty"></script>
-	
-	<!-- TODO : include d3.v3.min.js in repository (to avoid relying on a third party website) -->
-	<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>	
 </head>
 <body ng-controller="StatisticsController">
 	<portal>
