--- a/src/main/resources/public/template/form.html
+++ b/src/main/resources/public/template/form.html
@@ -14,7 +14,7 @@
 			<span class="ten cell">
 				<select ng-model="form.indicator" 
 					ng-init="form.indicator = indicators[0]"
-					ng-options="indicator for indicator in indicators">
+					ng-options="translate(indicator) for indicator in indicators">
 				</select>
 			</span>
 		</div>
@@ -24,24 +24,29 @@
 				<select ng-model="form.module" 
 					ng-init="form.module = modules[0]"
 					ng-options="module for module in modules">
+					<!-- TODO : get displayname of modules in model.me.apps -->
 				</select>
 			</span>
 		</div>
 		
-<!-- 		<div class="row"> -->
-<!-- 			<label class="two cell"><i18n>statistics.form.start.month</i18n></label> -->
-<!-- 			<span class="ten cell"> -->
-<!-- 				<select -->
-<!-- 				</select> -->
-<!-- 			</span> -->
-<!-- 		</div> -->
-<!-- 		<div class="row"> -->
-<!-- 			<label class="two cell"><i18n>statistics.form.end.month</i18n></label> -->
-<!-- 			<span class="ten cell"> -->
-<!-- 				<select -->
-<!-- 				</select> -->
-<!-- 			</span> -->
-<!-- 		</div> -->
+		<div class="row">
+			<label class="two cell"><i18n>statistics.form.from</i18n></label>
+			<span class="ten cell">
+				<select ng-model="form.from" 
+					ng-init="form.from = dates[0]"
+					ng-options="formatMoment(date) for date in dates">
+				</select>
+			</span>
+		</div>
+		<div class="row">
+			<label class="two cell"><i18n>statistics.form.to</i18n></label>
+			<span class="ten cell">
+				<select ng-model="form.to" 
+					ng-init="form.to = dates[dates.length-1]"
+					ng-options="formatMoment(date) for date in dates">
+				</select>
+			</span>
+		</div>
 		
 		<div class="row">
 			<div ng-if="!form.processing">
