Add y axis to chart, labels, etc

--- a/src/main/resources/public/template/chart.html
+++ b/src/main/resources/public/template/chart.html
@@ -1,6 +1,6 @@
 <article class="twelve cell">
 	<div class="diag">
-		<h2>[[translate(chart.indicator)]]</h2>
+		<h2>[[chart.title]]</h2>
 		<div ng-if="chart.data && chart.data.length > 0">
 			<form>
 				<i18n>statistics.chart.separate.by.profile</i18n>
