--- a/src/main/resources/public/template/form.html
+++ b/src/main/resources/public/template/form.html
@@ -32,8 +32,8 @@
 			<label class="two cell"><i18n>statistics.form.from</i18n></label>
 			<span class="ten cell">
 				<select ng-model="form.from" 
-					ng-init="form.from = dates[0]"
-					ng-options="formatMoment(date) for date in dates">
+					ng-init="form.from = dates[0].moment"
+					ng-options="date.moment as date.label for date in dates">
 				</select>
 			</span>
 		</div>
@@ -41,8 +41,8 @@
 			<label class="two cell"><i18n>statistics.form.to</i18n></label>
 			<span class="ten cell">
 				<select ng-model="form.to" 
-					ng-init="form.to = dates[dates.length-1]"
-					ng-options="formatMoment(date) for date in dates">
+					ng-init="form.to = dates[dates.length-1].moment"
+					ng-options="date.moment as date.label for date in dates">
 				</select>
 			</span>
 		</div>
