--- a/src/main/resources/view/statistics.html
+++ b/src/main/resources/view/statistics.html
@@ -8,6 +8,7 @@
 	<script src="/statistics/public/js/model.js" type="text/javascript"></script>
 	<script src="/statistics/public/js/controller.js" type="text/javascript"></script>
 	<script src="/statistics/public/js/d3-3.5.5.min.js" type="text/javascript"></script>
+	<script src="/statistics/public/js/d3-tip-0.6.3.min.js"></script>
 	<script type="text/ng-template" id="empty"></script>
 	<link href="/statistics/public/css/chart.css" rel="stylesheet">
 </head>
