--- a/src/main/resources/public/template/form.html
+++ b/src/main/resources/public/template/form.html
@@ -3,7 +3,7 @@
 		<div class="row">
 			<div>
 				<label class="two cell"><i18n>statistics.form.school</i18n></label>
-				<span class="four cell">
+				<span class="three cell">
 					<select ng-hide="schools.length === 1" 
 						ng-model="form.school_id"
 						ng-init="form.school_id = schools[0].id"
@@ -13,7 +13,7 @@
 				</span>
 			</div>
 			<label class="one cell"><i18n>statistics.form.from</i18n></label>
-			<span class="five cell">
+			<span class="six cell">
 				<select ng-model="form.from" 
 					ng-init="form.from = dates[0].moment"
 					ng-options="date.moment as date.label for date in dates">
@@ -22,14 +22,14 @@
 		</div>
 		<div class="row">
 			<label class="two cell"><i18n>statistics.form.indicator</i18n></label>
-			<span class="four cell">
+			<span class="three cell">
 				<select ng-model="form.indicator" 
 					ng-init="form.indicator = indicators[0]"
 					ng-options="translate(indicator) for indicator in indicators">
 				</select>
 			</span>
 			<label class="one cell"><i18n>statistics.form.to</i18n></label>
-			<span class="five cell">
+			<span class="six cell">
 				<select ng-model="form.to" 
 					ng-init="form.to = dates[dates.length-1].moment"
 					ng-options="date.moment as date.label for date in dates">
