Improve drop-down lists for dates

--- a/src/main/resources/public/template/form.html
+++ b/src/main/resources/public/template/form.html
@@ -28,7 +28,7 @@
 			<label class="one cell"><i18n>statistics.form.to</i18n></label>
 			<span class="six cell">
 				<select ng-model="form.to" 
-					ng-options="date.moment as date.label for date in dates">
+					ng-options="date.moment as date.label for date in toDates">
 				</select>
 			</span>
 		</div>
