--- a/src/main/resources/public/template/form.html
+++ b/src/main/resources/public/template/form.html
@@ -46,8 +46,7 @@
 			
 			<div ng-if="!form.processing">
 				<button class="right-magnet" ng-click="getData()"><i18n>statistics.form.display.chart</i18n></button>
-				<!-- TODO : export CSV -->
-				<button class="right-magnet" disabled="true" ng-click="exportData()"><i18n>statistics.form.export.to.csv</i18n></button>
+				<button class="right-magnet" ng-click="getData('csv')"><i18n>statistics.form.export.to.csv</i18n></button>
 			</div>
 			<i18n ng-if="form.processing === true" class="right-magnet">statistics.form.processing</i18n>
 		</div>
