--- a/src/main/resources/public/css/chart.css
+++ b/src/main/resources/public/css/chart.css
@@ -8,3 +8,18 @@
 .tooltip {
   display: inline !important;
 }
+
+path.slice{
+	stroke-width:2px;
+}
+polyline{
+	opacity: .3;
+	stroke: black;
+	stroke-width: 2px;
+	fill: none;
+} 
+svg text.percent{
+	fill:white;
+	text-anchor:middle;
+	font-size:12px;
+}
