--- a/src/main/resources/public/template/chart.html
+++ b/src/main/resources/public/template/chart.html
@@ -6,8 +6,13 @@
 			<i18n>statistics.chart.separate.by.profile</i18n>
 		</label>
 	</div>
+	
+	<div>
+		<piechart val="testdmt.piechartData" grouped="dummyValue" indicator="chart.indicatorName"></piechart>
+	</div>
+	
 	<div ng-if="chart.data && chart.data.length > 0">
-		<chart val="chart.data" grouped="chart.grouped" indicator="chart.indicatorName"></chart>
+		<barchart val="chart.data" grouped="chart.grouped" indicator="chart.indicatorName"></chart>
 		<button ng-if="!form.processing" class="right-magnet" ng-click="getData('csv')"><i18n>statistics.form.export.to.csv</i18n></button>
 		<i18n ng-if="form.processing === true" class="right-magnet">statistics.form.processing</i18n>
 	</div>
