--- a/src/main/resources/public/template/chart.html
+++ b/src/main/resources/public/template/chart.html
@@ -6,13 +6,12 @@
 			<i18n>statistics.chart.separate.by.profile</i18n>
 		</label>
 	</div>
-	
-	<div>
-		<piechart val="testdmt.piechartData" grouped="dummyValue" indicator="chart.indicatorName"></piechart>
-	</div>
-	
 	<div ng-if="chart.data && chart.data.length > 0">
-		<barchart val="chart.data" grouped="chart.grouped" indicator="chart.indicatorName"></chart>
+		<barchart ng-if="!chart.accessAllModules" 
+			val="chart.data" grouped="chart.grouped" indicator="chart.indicatorName"></barchart>
+		<piechart ng-if="chart.accessAllModules===true" 
+			val="testdmt.piechartData" grouped="dummyValue" indicator="chart.indicatorName"></piechart>
+		
 		<button ng-if="!form.processing" class="right-magnet" ng-click="getData('csv')"><i18n>statistics.form.export.to.csv</i18n></button>
 		<i18n ng-if="form.processing === true" class="right-magnet">statistics.form.processing</i18n>
 	</div>
