--- a/src/main/resources/public/css/chart.css
+++ b/src/main/resources/public/css/chart.css
@@ -1,3 +1,4 @@
+/* Bar chart */
 .axis path,
 .axis line {
   fill: none;
@@ -9,6 +10,8 @@
   display: inline !important;
 }
 
+
+/* Pie chart */
 path.slice{
 	stroke-width:2px;
 }
