--- a/src/main/resources/public/template/chart.html
+++ b/src/main/resources/public/template/chart.html
@@ -1,7 +1,7 @@
 <article class="twelve cell">
 	<div class="row">
 		<span class="nine cell"><h2>[[chart.title]]</h2></span>
-		<label class="right-magnet" ng-if="chart.profiles && chart.profiles.length > 1">
+		<label class="right-magnet" ng-if="(chart.profiles && chart.profiles.length > 1) || chart.accessAllModules===true">
 			<input type="checkbox" ng-model="chart.grouped">
 			<i18n>statistics.chart.separate.by.profile</i18n>
 		</label>
@@ -10,7 +10,7 @@
 		<barchart ng-if="!chart.accessAllModules" 
 			val="chart.data" grouped="chart.grouped" indicator="chart.indicatorName"></barchart>
 		<piechart ng-if="chart.accessAllModules===true" 
-			val="chart.globalData" grouped="chart.grouped" indicator="chart.indicatorName"></piechart>
+			val="chart.allData" grouped="chart.grouped" indicator="chart.indicatorName"></piechart>
 		
 		<button ng-if="!form.processing" class="right-magnet" ng-click="getData('csv')"><i18n>statistics.form.export.to.csv</i18n></button>
 		<i18n ng-if="form.processing === true" class="right-magnet">statistics.form.processing</i18n>
