--- a/src/main/resources/public/template/chart.html
+++ b/src/main/resources/public/template/chart.html
@@ -7,13 +7,17 @@
 		</label>
 	</div>
 	<div ng-if="chart.data && chart.data.length > 0">
-		<barchart ng-if="!chart.accessAllModules" 
-			val="chart.data" grouped="chart.grouped" indicator="chart.indicatorName"></barchart>
-		<piechart ng-if="chart.accessAllModules===true" 
-			val="chart.allData" grouped="chart.grouped" indicator="chart.indicatorName"></piechart>
+		<div class="row">
+			<barchart ng-if="!chart.accessAllModules" 
+				val="chart.data" grouped="chart.grouped" indicator="chart.indicatorName"></barchart>
+			<piechart ng-if="chart.accessAllModules===true" 
+				val="chart.allData" grouped="chart.grouped" indicator="chart.indicatorName"></piechart>
+		</div>
 		
-		<button ng-if="!form.processing" class="right-magnet" ng-click="getData('csv')"><i18n>statistics.form.export.to.csv</i18n></button>
-		<i18n ng-if="form.processing === true" class="right-magnet">statistics.form.processing</i18n>
+		<div class="row">
+			<button ng-if="!form.processing" class="right-magnet" ng-click="getData('csv')"><i18n>statistics.form.export.to.csv</i18n></button>
+			<i18n ng-if="form.processing === true" class="right-magnet">statistics.form.processing</i18n>
+		</div>
 	</div>
 	<div ng-if="!(chart.data && chart.data.length > 0)">
 		<i18n>statictics.no.data.found</i18n>
