#4689 barchart that is both stacked and grouped

--- a/src/main/resources/public/css/chart.css
+++ b/src/main/resources/public/css/chart.css
@@ -6,6 +6,11 @@
   shape-rendering: crispEdges;
 }
 
+.x.axis path,
+.x.axis line {
+  visibility: hidden
+}
+
 .tooltip {
   display: inline !important;
 }
