Fix#6403 : Display problem when window size becomes to small

--- a/src/main/resources/public/template/form.html
+++ b/src/main/resources/public/template/form.html
@@ -1,6 +1,6 @@
 <article class="twelve cell">
 	<form class="row">
-		<div class="row">
+		<div class="row zero-mobile">
 			<div>
 				<label class="two cell"><i18n>statistics.form.school</i18n></label>
 				<span class="three cell">
@@ -18,7 +18,7 @@
 				</select>
 			</span>
 		</div>
-		<div class="row">
+		<div class="row zero-mobile">
 			<label class="two cell"><i18n>statistics.form.indicator</i18n></label>
 			<span class="three cell">
 				<select ng-model="form.indicator" 
@@ -33,7 +33,7 @@
 			</span>
 		</div>
 		
-		<div class="row">
+		<div class="row zero-mobile">
 			<div ng-if="form.indicator === 'ACCESS'">
 				<label class="two cell"><i18n>statistics.form.module</i18n></label>
 				<span class="four cell">
