--- a/src/main/resources/public/template/admin.html
+++ b/src/main/resources/public/template/admin.html
@@ -3,7 +3,7 @@
         <h2>
             <i18n>statistics.admin.generate.stats</i18n>
         </h2>
-        <div class="row">
+        <div class="row zero-mobile">
             <div>
                 <label class="two cell"><i18n>statistics.form.school</i18n></label>
 				<span class="three cell">
@@ -21,7 +21,7 @@
                 </select>
 			</span>
         </div>
-        <div class="row">
+        <div class="row zero-mobile">
             <label class="two cell"><i18n>statistics.form.indicator</i18n></label>
 			<span class="three cell">
 				<select ng-model="form.indicator"
@@ -36,7 +36,7 @@
 			</span>
         </div>
 
-        <div class="row">
+        <div class="row zero-mobile">
             <div ng-if="form.indicator === 'ACCESS'">
                 <label class="two cell"><i18n>statistics.form.module</i18n></label>
 				<span class="four cell">
