Fix#10161 : disable the access to the regeneration tool (just hidding for now)

--- a/src/main/resources/view/statistics.html
+++ b/src/main/resources/view/statistics.html
@@ -19,7 +19,7 @@
 					<i18n>statistics.title</i18n>
 				</h1>
         </div>
-        <div class="display-buttons">
+        <div class="display-buttons" ng-if="false">
                 <i class="show-admin" ng-click="showManage()" ng-class="{ selected: display.admin === false }"
                    tooltip="statistics.admin.access"></i>
                 <i class="show-list" ng-click="showMain()" ng-class="{ selected: display.admin === true }"
