--- a/src/main/resources/public/template/form.html
+++ b/src/main/resources/public/template/form.html
@@ -3,7 +3,7 @@
 		<div class="row">
 			<div>
 				<label class="two cell"><i18n>statistics.form.school</i18n></label>
-				<span class="three cell">
+				<span class="four cell">
 					<select ng-hide="schools.length === 1"
 						ng-model="form.school_id"
 						ng-options="school.id as school.name for school in schools">
@@ -12,7 +12,7 @@
 				</span>
 			</div>
 			<label class="one cell"><i18n>statistics.form.from</i18n></label>
-			<span class="six cell">
+			<span class="five cell">
 				<select ng-model="form.from"
 					ng-options="date.moment as date.label for date in dates">
 				</select>
@@ -20,13 +20,13 @@
 		</div>
 		<div class="row">
 			<label class="two cell"><i18n>statistics.form.indicator</i18n></label>
-			<span class="three cell">
+			<span class="four cell">
 				<select ng-model="form.indicator" 
 					ng-options="translate(indicator) for indicator in indicators">
 				</select>
 			</span>
 			<label class="one cell"><i18n>statistics.form.to</i18n></label>
-			<span class="six cell">
+			<span class="five cell">
 				<select ng-model="form.to" 
 					ng-options="date.moment as date.label for date in toDates">
 				</select>
