--- a/src/main/resources/public/template/form.html
+++ b/src/main/resources/public/template/form.html
@@ -53,6 +53,19 @@
 				</span>
 			</div>
 
+		</div>
+
+		<div class="row">
+			<div ng-if="form.indicator === 'LOGIN' || form.indicator === 'ACCESS' || form.indicator === 'UNIQUE_VISITORS'">
+				<label class="two cell"><i18n>statistics.form.device</i18n></label>
+				<span class="four cell">
+						<select ng-model="form.device"
+						ng-init="form.device = devices[0].name"
+						ng-options="device.name for device in devices">
+					</select>
+				</span>
+			</div>
+
 			<button ng-if="!form.processing" class="right-magnet" ng-click="getData()"><i18n>statistics.form.display.chart</i18n></button>
 			<i18n ng-if="form.processing === true" class="right-magnet">statistics.form.processing</i18n>
 		</div>
