--- a/src/main/resources/view/statistics.html
+++ b/src/main/resources/view/statistics.html
@@ -11,6 +11,9 @@
 	<script src="/statistics/public/js/d3-tip-0.6.3.min.js"></script>
 	<script type="text/ng-template" id="empty"></script>
 	<link href="/statistics/public/css/chart.css" rel="stylesheet">
+	<script>
+		var deviceFilter = {{deviceFilter}}
+	</script>
 </head>
 <body ng-controller="StatisticsController">
 	<portal>
